# analyseConditionalComments

./: CMakeLists.txt  Makefile  README.md  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  params.json  res.qrc
analyser/: analysermanager.cpp  analysermanager.h  cfileanalyser.cpp  cfileanalyser.h  fileresult.cpp  fileresult.h
cmake/: FindLibRSVG.cmake
