cmake_minimum_required(VERSION 2.8)
PROJECT(analyseCSourceFiles)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")

# Find Qt
find_package(Qt4 4.7.0 COMPONENTS QtCore QtNetwork QtGui QtWebKit QUIET)
IF (NOT ${QT_FOUND})
	message(FATAL_ERROR "Qt libraries not intalled!")
	return()
ENDIF()

#Build with PDF support
find_package(Cairo)
find_package(LibRSVG)
FIND_PACKAGE(Glib)
IF (Cairo_FOUND AND LibRSVG_FOUND AND Glib_FOUND)
  ADD_DEFINITIONS(-DWITHPDF)
  MESSAGE("With PDF Export support")
ELSE()
  MESSAGE("Without PDF Export support (Cairo:${Cairo_FOUND}, Librsvg: ${LibRSVG_FOUND})")
ENDIF()


include_directories(${QT_INCLUDES} ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${Cairo_INCLUDE_DIRS}
${LibRSVG_INCLUDE_DIRS} ${Glib_INCLUDE_DIRS})

ADD_DEFINITIONS(-D_GNU_SOURCE -Wall -W -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_NO_KEYWORDS ${QT_DEFINITIONS})

file(GLOB_RECURSE SRCS_H *.h)
file(GLOB_RECURSE SRCS *.cpp)
file(GLOB_RECURSE SRCS_UI *.ui)
file(GLOB_RECURSE SRCS_RCC *.qrc)

QT4_WRAP_UI(SRCS_UI_H ${SRCS_UI})
QT4_WRAP_CPP(SRCS_MOCS ${SRCS_H})
#QT4_ADD_RESOURCES(SRCS_RCC_H ${SRCS_RCC})

add_executable(${PROJECT_NAME} ${SRCS} ${SRCS_MOCS} ${SRCS_UI_H} ${SRCS_RCC_H})

target_link_libraries(${PROJECT_NAME}
${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARIES} ${QT_QTWEBKIT_LIBRARIES} ${Cairo_LIBRARIES} ${LibRSVG_LIBRARIES} ${Glib_LIBRARIES})
